--- a/life-divided-frontend/src/App.css
+++ b/life-divided-frontend/src/App.css
@@ -1,9 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Cormorant:ital,wght@0,300;1,400&display=swap'); 
-
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital@0;1&display=swap');
 .App {
   text-align: center;
-  font-family: 'Cormorant', serif;
-  list-style-type: none;
+  font-family: 'Playfair Display', serif;
+  font-style: italic;
+    list-style-type: none;
 
 }
 
@@ -12,13 +12,14 @@
 }
 
 #nav {
-  display: flex;
-  justify-content: space-between;
-  display: flex;
-  list-style: none;
-  margin: 0;
-  padding: 0;
-  margin: 0 10px;
+  /* display: flex; */
+  /* justify-content: space-between; */
+  /* display: flex; */
+  /* list-style: none; */
+  margin-top: 5em;
+  margin-bottom: 0;
+  /* padding: 0; */
+  /* margin: 0 10px; */
   color: white;
   text-decoration: none;
   font-size: larger;
@@ -27,4 +28,146 @@
 
 #goalForm{
   padding-bottom: 3em;
+  
+}
+.form-input{
+  /* border-radius: 0;
+  border: .4px solid #000000;
+  height: 1em;
+  width: 20em;
+  font-size: larger;
+  text-align: center;
+  font-family: 'Cormorant', serif;
+  font-size: 1em;
+  background-color: hsl(40, 4%, 85%);  */
+  background: transparent;
+  outline: none;
+  color: grey;
+  font-size: 1.25em;
+  border: solid 1px #b3aca7;
+  font-family: 'Cormorant', serif;
+  text-align: center;
+}
+ /* input{
+  outline:none;
+  cursor: pointer;
+  background: transparent;
+  font-size: 1.5em;
+  border: 1px;
+ } */
+
+.title{
+  font-size: 10em;
+  margin-bottom: -.10em;
+  /* background-color: hsla(33, 51%, 37%, 0.774);  */
+  margin-left: 2em;
+  margin-right: 2em;
+  font-weight: 200;
+}
+
+#home {
+  position: absolute;
+top: 50%;
+left: 50%;
+transform: translate(-50%, -50%);
+}
+
+/* #fade {
+  animation: fade 2s ease-in-out;
+  animation-iteration-count: infinite;
+  opacity: 0;
+}
+
+@keyframes fade {
+  0% { opacity: 0; }
+  50% { opacity: 1; }
+  100% { opacity: 0; }
+} */
+
+#blur {
+  animation: blur 4s ease-in-out;
+  animation-iteration-count: infinite;
+  filter: blur(0px);
+  font-size: 2em;
+}
+
+@keyframes blur {
+  0% { filter: blur(0px); }
+  50% { filter: blur(50px); }
+  100% { filter: blur(0px); }
+}
+
+#life{
+  font-size: 5em;
+}
+
+#enterButton{
+  border: .4px solid #000000; /* 2px solid black border */
+  border-radius: 0; /* Sharp corners */
+  padding: 5px 15px; /* Add some padding to the button */
+  background-color: #ffffff; /* White background color */
+  color: #000000; /* Black text color */
+  font-size: 16px; /* Set the font size */
+  cursor: pointer; /* Change cursor to pointer on hover */
+  text-decoration: none;  
+}
+
+#enterButton:hover {
+  border-color: #7e6e6e; /* red border color on hover */
+  background-color: #e6e6e6; /* light gray background color on hover */
+}
+
+#about{
+  background-color: hsla(33, 51%, 37%, 0.774); /* set the background color */
+  /* negative value to make it overlap the h1 tag */
+  margin-top: -80px;
+  padding: 100px; /* give it some padding */
+  
+}
+
+.logo{
+  position: relative;
+}
+
+#section {
+  color: black;
+  text-decoration: none;
+}
+
+#section:hover{
+  color: #7e6e6e;
+}
+#section:active{
+  color: #e4d9d9;
+}
+
+#deleteBtn{
+  outline: none;
+  color: red;
+  border: none;
+  background-color: transparent;
+  font-size: 7pt;
+}
+
+#deleteBtn:hover{
+  font-size: 14px;
+}
+
+#formBtn{
+  outline:none;
+  cursor: pointer;
+  background: transparent;
+  font-size: 1.5em;
+  border: 1px;
+}
+
+#editBtn{
+  outline: none;
+  color: red;
+  border: none;
+  background-color: transparent;
+  font-size: 10pt;
+}
+#editBtn:hover{
+  font-size: 18px;
 }
