--- a/life-divided-frontend/src/App.css
+++ b/life-divided-frontend/src/App.css
@@ -125,6 +125,8 @@ transform: translate(-50%, -50%);
 #section {
   color: black;
   text-decoration: none;
+margin-left: auto;
+margin-right: auto;
 }
 
 #section:hover{
@@ -161,6 +163,7 @@ transform: translate(-50%, -50%);
   background-color: transparent;
   font-size: 10pt;
 }
+
 #editBtn:hover{
   font-size: 18px;
 }
@@ -169,3 +172,4 @@ h3{
   margin-bottom: -3px;
   font-size: 30px;
 }
+
